# fty-asset

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  ci_build.sh  configure.ac  project.xml
accessor/: CMakeLists.txt
accessor/public_includes/: fty_asset_accessor.h
accessor/src/: fty_asset_accessor.cc
accessor/test/: test.cpp
asset/: CMakeLists.txt
asset/asset/: asset-cam.h  asset-configure-inform.h  asset-db.h  asset-db2.h  asset-helpers.h  asset-import.h  csv.h  db.h  error.h  json.h
asset/asset/db/: select.h
asset/fty/asset/: asset-db.h
asset/include/asset/: asset-computed.h  asset-db.h  asset-dto.h  asset-helpers.h  asset-licensing.h  asset-manager.h  asset-notifications.h  csv.h
asset/include/asset/db/: defs.h  misc.h  select.h
asset/src/: asset-cam.cpp  asset-computed.cpp  asset-configure-inform.cpp  asset-db.cpp  asset-helpers.cpp  asset-import.cpp  asset-licensing.cpp  asset-notifications.cpp  csv.cpp  json.cpp
asset/src/db/: misc.cpp  select.cpp
asset/src/manager/: create.cpp  delete.cpp  export.cpp  import.cpp  read.cpp
asset/src/messagebus/: message-bus.cpp  message-bus.h  message.cpp  message.h
asset/test/: CMakeLists.txt  create.cpp  delete.cpp  export.cpp  import.cpp  main.cpp  norm-name.cpp  read.cpp  sampledb.cpp  test-utils.h  usize.cpp
asset/test-db/: CMakeLists.txt  sample-db.cpp  sample-db.h  test-db.cpp
asset/test-db/include/: sample-db.h  test-db.h
asset/test-db/src/: sample-db.cpp  test-db.cpp
asset/test-db/src/structure/: bios_asset_device_type.h  bios_asset_element.h  bios_asset_element_type.h  bios_asset_ext_attributes.h  bios_asset_group_relation.h  bios_asset_link.h  bios_asset_link_type.h  bios_device_type.h  bios_discovered_device.h  bios_monitor_asset_relation.h  bios_tag.h
asset/test-db/structure/: bios_asset_device_type.h  bios_asset_element.h  bios_asset_element_type.h  bios_asset_ext_attributes.h  bios_asset_group_relation.h  bios_asset_link.h  bios_asset_link_type.h  bios_device_type.h  bios_discovered_device.h  bios_monitor_asset_relation.h
asset/test/db/: insert.cpp  names.cpp  select.cpp
asset/test/db2/: misc.cpp  select.cpp
builds/cmake/: ci_build.sh
include/: fty_asset_dto.h
lib/: CMakeLists.txt  fty_asset_dto.cpp
lib/include/conversion/: json.h
lib/public_includes/: fty_asset_dto.h  fty_common_asset.h
lib/src/: fty_asset_dto.cc  fty_common_asset.cc
lib/src/conversion/: full-asset.cc  full-asset.h  json.cc  json.h  proto.cc  proto.h
lib/test/: fty_asset_dto.cpp  fty_common_asset.cpp  test.cpp
packaging/debian/: changelog  control  copyright  libfty-asset-dev.install
server/: CMakeLists.txt
server/include/: fty_asset_autoupdate.h  fty_asset_inventory.h  fty_asset_server.h
server/include/asset/: dbhelpers.h
server/src/: asset-server.cc  asset-server.h  dbhelpers.cc  dns.cc  dns.h  fty-lock.h  fty_asset_autoupdate.cc  fty_asset_inventory.cc  fty_asset_server.cc  topology_processor.cc  topology_processor.h  total_power.cc  total_power.h
server/src/asset/: asset-cam.cc  asset-cam.h  asset-db-test.cc  asset-db-test.h  asset-db.cc  asset-db.h  asset-storage.h  asset-utils.cc  asset-utils.h  asset.cc  asset.h
server/src/topology/: topology_input_powerchain.cc  topology_location.cc  topology_power.cc
server/src/topology/db/: topology2.cc  topology2.h
server/src/topology/msg/: asset_msg.cc  asset_msg.h  common_msg.cc  common_msg.h
server/src/topology/persist/: assetcrud.cc  assettopology.cc  monitor.cc
server/src/topology/shared/: asset_general.cc  data.cc  location_helpers.cc  utilspp.cc
server/tests/: asset_msg.cc  common_msg.cc  dns.cc  fty_asset_autoupdate.cc  fty_asset_inventory.cc  fty_asset_server.cc  main.cc
src/: asset-server.cc  asset-server.h  dbhelpers.cc  fty_asset_dto.cc  fty_asset_manipulation.cc  fty_asset_server.cc
src/asset/: asset-db-test.cc  asset-db-test.h  asset-db.cc  asset-db.h  asset.cc  asset.h
src/asset/conversion/: json.cc
src/topology/db/: topology2.cc
